# HaskellCalculator

./: .gitignore  Add.hs  Application.hs  Calc.hs  DBHandler.hs  Div.hs  Home.hs  Mult.hs  Operations.hs  README.md  Sub.hs  calculations.db  calculations.db-shm  calculations.db-wal  calculator.cabal  client_session_key.aes  routes  setubdb.sh  style.lucius
.stack-work/install/x86_64-linux/lts-8.2/8.0.2/flag-cache/: calculator-0.0.0
