name:               calculator
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          calculator
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Operations
                    Home
                    Calc
                    DBHandler

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , aeson
                , persistent
                , persistent-sqlite
                , persistent-template

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
